vpc.tf
resource "aws_vpc" "this" {

  cidr_block = var.vpc_cidr

  tags = merge(
    local.common_tags,
    {
      Name = "adam-capstone-vpc"
    }
  )
}
